Slight fix to feature items heights on mobile Safari

--- a/src/main/resources/_sass/light-style/_features.scss
+++ b/src/main/resources/_sass/light-style/_features.scss
@@ -127,6 +127,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      flex: 1 0 auto;
     }
   }
 }
@@ -166,6 +167,14 @@
       max-width: 100%;
       align-items: center;
       padding: $base-point-grid * 6 0;
+
+      .masthead-title {
+        font-size: 2rem;
+      }
+
+      .masthead-description {
+        font-size: 1.25rem;
+      }
     }
   }
 
